# yt-transcript-downloader

./: .env.example  .gitignore  ENCODING_VERIFICATION.md  README.md  content_resources.json  main.py  main_supadata.py  pyproject.toml  test_encoding.py  test_main.py  test_main_supadata.py
